@@ -1,5 +1,6 @@
 include setup.py MANIFEST.in
-include doc/README.txt doc/LICENSE ChangeLog
+include doc/README.txt ChangeLog
+include LICENSE.GPL-2
 include Makefile setuptools.mk
 include gracie/module.mk
 include test/module.mk
