@@ -10,7 +10,7 @@
 # under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of that license or,
 # at your option, any later version.
-# No warranty expressed or implied. See the file LICENSE for details.
+# No warranty expressed or implied. See the file ‘LICENSE.GPL-2’ for details.
 
 """ Create the distribution tarball from VCS. """
 
